updated testing protocol tried more stuff with ListView

--- a/Versuchsprotokoll/Versuchsprotokoll.tex
+++ b/Versuchsprotokoll/Versuchsprotokoll.tex
@@ -10,30 +10,37 @@
 \begin{document}
 \maketitle
 \section*{Einleitung}
-Irgendwie fällt mir grade auf, wie unsinnig es ist, Versuchsprotokolle zu entwerfen, wenn die Software noch 
-längst nicht in ihrer vollendeten Version steht...\\
-Funktionalität, die untersucht werden sollte: Kontakte, Emails, Accounts, Anhänge?
+Accessmail ist ein einfach zu bedienender Email-Client. In folgenden Tests 
+sollen die Funktionalitäten untersucht werden. Insbesondere 
+soll auf die Einfachheit der Abläufe in der GUI geachtet werden.
 \section*{Versuche}
 \subsection*{Versuch I}
+Erstellen eines Email Accounts
+\begin{itemize}
+	\item Besuchen Sie folgende Homepage "'www.hotmail.de"'.
+	\item Erstellen Sie sich einen Email Account.
+	\item Bei Problemen stellen wir einen Email Account für spätere Versuche.
+\end{itemize}
+\subsection*{Versuch II}
 Emails schicken und empfangen und beantworten.
 \begin{itemize}
 	\item Öffnen Sie das Programm.
-	\item Geben Sie die Daten eines vorhandenen E-mail Accounts ein.
-	\item Gehen Sie auf den Reiter "Write" und verfassen eine E-mail an sich selbst. 
+	\item Geben Sie die Daten des vorher erstellten E-mail Accounts ein.
+	\item Gehen Sie auf den Reiter "'Write"' und verfassen eine E-mail an unseren Testaccount "'accessTest@hotmail.de"' selbst. 
 	\item Schicken Sie die E-mail ab.
-	\item Wechseln Sie auf den Reiter "Overview" und suchen Sie nach Ihrer grade geschickten Mail.
+	\item Wechseln Sie auf den Reiter "'Overview"' und warten sie auf die Antwort des Admin Accounts.
 	\item Öffnen Sie die Mail und lesen Sie sie.
-	\item Beantworten Sie die Mail über die Schaltfläche "Reply".	
+	\item Beantworten Sie die Mail über die Schaltfläche "'Reply"'.	
 \end{itemize}
-\subsection*{Versuch II}
-Kontakte hinzufügen, emails schicken und löschen.
+\subsection*{Versuch III}
+Kontakte hinzufügen und löschen.
 \begin{itemize}
-	\item Öffnen Sie das Programm.
-	\item Geben Sie die Daten eines vorhandenen E-mail Accounts ein.
-	\item Gehen Sie auf den Reiter "Write" und verfassen eine E-mail an sich selbst. 
-	\item Schicken Sie die E-mail ab.
-	\item Wechseln Sie auf den Reiter "Overview" und suchen Sie nach Ihrer grade geschickten Mail.
-	\item Öffnen Sie die Mail und lesen Sie sie.
-	\item Beantworten Sie die Mail über die Schaltfläche "Reply".	
+	\item Öffnen sie das Programm (falls noch nicht geschehen).
+	\item Gehen sie auf den Reiter "'Kontakte"'
+	\item Fügen sie einen neuen Kontakt für "'accessTest@hotmail.de"' hinzu.
+	\item Fügen sie einen zweiten Kontakt ihrer Wahl hinzu.
+	\item Löschen sie den Kontakt für "'accessTest@hotmail.de"'. 	
 \end{itemize}
+\section*{Feedback}
+Geben sie konstruktives Feedback anhand ihrer Gedanken zu den Versuchen! 
 \end{document}
