added TODO file

--- a/Versuchsprotokoll/Versuchsprotokoll.tex
+++ b/Versuchsprotokoll/Versuchsprotokoll.tex
@@ -9,11 +9,16 @@
 
 \begin{document}
 \maketitle
+% Eingehende Frage, was sich hinter den Icons verbrigt
 \section*{Einleitung}
 Accessmail ist ein einfach zu bedienender Email-Client. In folgenden Tests 
 sollen die Funktionalitäten untersucht werden. Insbesondere 
 soll auf die Einfachheit der Abläufe in der GUI geachtet werden.
 \section*{Versuche}
+% Nur email account erstellen
+% Test wie weit das Medium Email verbreitet ist
+% Falls der Provider von unseren angebotenen abweicht, einfach noch einen erstellen lassen
+% eigene Emails können evtl. auch verwendet werden
 \subsection*{Versuch I}
 Erstellen eines Email Accounts
 \begin{itemize}
@@ -21,6 +26,7 @@ Erstellen eines Email Accounts
 	\item Erstellen Sie sich einen Email Account.
 	\item Bei Problemen stellen wir einen Email Account für spätere Versuche.
 \end{itemize}
+% Mails löschen
 \subsection*{Versuch II}
 Emails schicken und empfangen und beantworten.
 \begin{itemize}
@@ -32,6 +38,8 @@ Emails schicken und empfangen und beantworten.
 	\item Öffnen Sie die Mail und lesen Sie sie.
 	\item Beantworten Sie die Mail über die Schaltfläche "'Reply"'.	
 \end{itemize}
+% Versuch 2 evtl. vor Versuch 3 ziehen
+% Email adressen untereinander austauschen
 \subsection*{Versuch III}
 Kontakte hinzufügen und löschen.
 \begin{itemize}
@@ -42,5 +50,9 @@ Kontakte hinzufügen und löschen.
 	\item Löschen sie den Kontakt für "'accessTest@hotmail.de"'. 	
 \end{itemize}
 \section*{Feedback}
-Geben sie konstruktives Feedback anhand ihrer Gedanken zu den Versuchen! 
+Wie hat dir das Design der Software gefallen? (Farben, Icons, Struktur)\\
+Ist dir die Bedienung schwer gefallen? Falls Ja, was genau?\\
+War es schwierig Kontakte anzulegen/zu löschen, Emails zu schreiben/zu löschen?\\
+Welche Funktion würdest du dir zusätzlich wünschen?\\
+Gibt es sonst irgendwelche Anmerkungen?\\
 \end{document}
