delete email im webdienst hinzugefügt und Versuchsprotokoll angepasst

--- a/Versuchsprotokoll/Versuchsprotokoll.tex
+++ b/Versuchsprotokoll/Versuchsprotokoll.tex
@@ -9,7 +9,6 @@
 
 \begin{document}
 \maketitle
-% Eingehende Frage, was sich hinter den Icons verbrigt
 \section*{Einleitung}
 Accessmail ist ein einfach zu bedienender Email-Client. In folgenden Tests 
 sollen die Funktionalitäten untersucht werden. Insbesondere 
@@ -22,37 +21,37 @@ soll auf die Einfachheit der Abläufe in der GUI geachtet werden.
 \subsection*{Versuch I}
 Erstellen eines Email Accounts
 \begin{itemize}
-	\item Besuchen Sie folgende Homepage "'www.hotmail.de"'.
-	\item Erstellen Sie sich einen Email Account.
+	\item Erstellen Sie sich einen Email Account bei einem der folgenden Anbieter: gmail.com oder web.de
+	\item Sollten sie schon einen Account bei einem der Anbieter besitzen, koennen sie diesen gerne fuer die folgenden Versuche benutzen.
 	\item Bei Problemen stellen wir einen Email Account für spätere Versuche.
 \end{itemize}
-% Mails löschen
 \subsection*{Versuch II}
-Emails schicken und empfangen und beantworten.
+Kontakte erstellen und loeschen.
 \begin{itemize}
 	\item Öffnen Sie das Programm.
 	\item Geben Sie die Daten des vorher erstellten E-mail Accounts ein.
-	\item Gehen Sie auf den Reiter "'Write"' und verfassen eine E-mail an unseren Testaccount "'accessTest@hotmail.de"' selbst. 
-	\item Schicken Sie die E-mail ab.
-	\item Wechseln Sie auf den Reiter "'Overview"' und warten sie auf die Antwort des Admin Accounts.
-	\item Öffnen Sie die Mail und lesen Sie sie.
-	\item Beantworten Sie die Mail über die Schaltfläche "'Reply"'.	
+	\item Erlautern Sie kurz welches Icon sie womit in Verbindung bringen.
+	\item Öffnen Sie das Addressbuch und fügen sie die Addresse ihres Nachbarn hinzu.
+	\item Fügen Sie außerdem eine willkürliche Addresse hinzu.
+	\item Löschen Sie diese wieder.
+	\item Fügen Sie weiter ein paar Addressen hinzu und machen sie sich mit dem Addressbuch vertraut	
 \end{itemize}
-% Versuch 2 evtl. vor Versuch 3 ziehen
-% Email adressen untereinander austauschen
 \subsection*{Versuch III}
-Kontakte hinzufügen und löschen.
+Emails verfassen und lesen.
 \begin{itemize}
-	\item Öffnen sie das Programm (falls noch nicht geschehen).
-	\item Gehen sie auf den Reiter "'Kontakte"'
-	\item Fügen sie einen neuen Kontakt für "'accessTest@hotmail.de"' hinzu.
-	\item Fügen sie einen zweiten Kontakt ihrer Wahl hinzu.
-	\item Löschen sie den Kontakt für "'accessTest@hotmail.de"'. 	
+	\item Öffnen Sie das Programm (falls noch nicht geschehen).
+	\item Gehen Sie auf den Reiter Addressbuch und verfassen sie eine Email an einen ihrer Kontakte.
+	\item Gehen Sie anschließen auf den Reiter "verfassen" und verfassen sie eine Email an sich selber.
+	\item Gehen Sie auf den Reiter "Übersicht" und schauen sie sich ihre vorhandenen Mails an.
+	\item Lesen Sie eine der Mails und beantworten sie diese.
+	\item Löschen Sie eine Mail und drücken sie auf den Button zum aktualisieren ihres Posteinganges. 	
 \end{itemize}
 \section*{Feedback}
-Wie hat dir das Design der Software gefallen? (Farben, Icons, Struktur)\\
-Ist dir die Bedienung schwer gefallen? Falls Ja, was genau?\\
-War es schwierig Kontakte anzulegen/zu löschen, Emails zu schreiben/zu löschen?\\
-Welche Funktion würdest du dir zusätzlich wünschen?\\
-Gibt es sonst irgendwelche Anmerkungen?\\
+Beantworten Sie bitte die folgenden Fragen:
+Wie hat dir das Design der Software gefallen? (Farben, Bilder, Struktur)
+Ist dir die Bedienung schwer gefallen? Falls Ja, was genau?
+War es schwierig Kontakte anzulegen/zu löschen, Emails zu schreiben/zu löschen?
+Welche Funktion würdest du dir zusätzlich wünschen?
+Gibt es sonst irgendwelche Anmerkungen?
+Vielen dank das Sie sich die Mühe genommen haben unser Programm zu testen!
 \end{document}
