updated presentation slides

--- a/Presentation/presentation_alpha.tex
+++ b/Presentation/presentation_alpha.tex
@@ -57,7 +57,7 @@
 			\begin{itemize}
 				\item Used for direct communication
 				\item Used for registration purposes
-				\item Used for many other cool things like explosions
+				\item Used for online banking and other organisational purposes
 			\end{itemize}
 		
 		\end{frame}
@@ -127,9 +127,15 @@
 			\begin{frame}
 				\frametitle{Testing routines}
 				\begin{itemize}
-					\item Unit tests
-					\item Usability tests
 					\item User Centered Design
+					\item Extensive testing phase with possible end-users
+				\end{itemize}
+				Problems found during this routine:
+				\begin{itemize}
+					\item Quite some bugs
+					\item Page indication needed
+					\item Nicer visualisation
+					\item Interest in E-Mail definitely given
 				\end{itemize}
 			\end{frame}
 			
@@ -138,103 +144,119 @@
 				\frametitle{Packaging}
 				\begin{itemize}
 					\item PyInstaller
-					\item Challenges: Many
-					\item Almost Cross-platform
-					\item Most frustrating part of development
+					\item Challenges: Missing libraries, incomplete wrapping
+					\item Meant to be cross-platform
 				\end{itemize}
 		    		
 			\end{frame}
 			
-			
-		\subsection{More}
-		
-			\begin{frame}
-				\frametitle{More}
-		    			More
-		    		
-			\end{frame}
-	
-		\subsection{The Software}
-			\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/firstStartRoot.png}
-				\end{figure}
-		    	\end{frame}
-		
-			\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/firstStartCredentials.png}
-				\end{figure}
-		    	\end{frame}
-			
-			\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/Inbox.png}
-				\end{figure}
-		    	\end{frame}
-			
-			\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/Outbox.png}
-				\end{figure}
-		    	\end{frame}
-		    	
-		    	\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/Write_blank.png}
-				\end{figure}
-		    	\end{frame}
-		    	
-		    	\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/Read.png}
-				\end{figure}
-		    	\end{frame}
-		    	
-		    	\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/Addresses.png}
-				\end{figure}
-		    	\end{frame}
-		    	
-		    	\begin{frame}
-				\frametitle{GUI}
-				\begin{figure}
-					\centering
-					\includegraphics[scale=0.2]{Images/Answer.png}
-				\end{figure}
-		    	\end{frame}
-			\begin{frame}
-				\frametitle{Techniques}
-				
-		    	\end{frame}
+%		\subsection{The Software}
+%			\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/firstStartRoot.png}
+%				\end{figure}
+%		    	\end{frame}
+%		
+%			\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/firstStartCredentials.png}
+%				\end{figure}
+%		    	\end{frame}
+%			
+%			\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/Inbox.png}
+%				\end{figure}
+%		    	\end{frame}
+%			
+%			\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/Outbox.png}
+%				\end{figure}
+%		    	\end{frame}
+%		    	
+%		    	\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/Write_blank.png}
+%				\end{figure}
+%		    	\end{frame}
+%		    	
+%		    	\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/Read.png}
+%				\end{figure}
+%		    	\end{frame}
+%		    	
+%		    	\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/Addresses.png}
+%				\end{figure}
+%		    	\end{frame}
+%		    	
+%		    	\begin{frame}
+%				\frametitle{GUI}
+%				\begin{figure}
+%					\centering
+%					\includegraphics[scale=0.2]{Images/Answer.png}
+%				\end{figure}
+%		    	\end{frame}
+%			\begin{frame}
+%				\frametitle{Techniques}
+%				
+%		    	\end{frame}
 		    	
 	
 	\section{Conclusion}
-		\begin{frame}
-			\frametitle{Conclusion}
-			%Diese Zusammenfassung ist nicht gut.
-			\begin{itemize}
-				\item E-Mail Client
-				\item Full functionality
-				\item Simple Design
-				\item Accessible for everyone
-			\end{itemize}
+	
+	
+		\subsection{The software}
+			\begin{frame}
+				\begin{center}
+					Let us have a look at the software!
+				\end{center}
+			\end{frame}
+		
+			\begin{frame}
+				\frametitle{The software}
+				%Diese Zusammenfassung ist nicht gut.
+				\begin{itemize}
+					\item Simple design
+					\item High contrast
+					\item No distractions
+					\item Obvious pictographs
+					\item Foreseeable behaviour
+					\item Confirmations
+				\end{itemize}
 			
-		\end{frame}
+			\end{frame}
+		
+		\subsection{The future}
+			\begin{frame}
+				\frametitle{Future plans}
+				%Diese Zusammenfassung ist nicht gut.
+				\begin{itemize}
+					\item More colours
+					\item Photos to visualize contacts
+					\item More language support
+					\item Additional introduction (in simple language) for E-Mail
+					\item More providers
+					\item Completely keyboard accessible
+				\end{itemize}
+			
+			\end{frame}
 
 \end{document}
